# voice-agent-using-livekit

./: .env.example  .gitignore  README.md  client.py  livekit_production_voice_agent_guide.md  pyproject.toml  requirements.txt  run.py  run.sh  test_text_client.py
real_estate_agent/: __init__.py  main.py
real_estate_agent/agents/: __init__.py  builder.py  greeter.py  instructions.py  property_search.py  scheduling.py
real_estate_agent/config/: settings.py
real_estate_agent/models/: __init__.py  appointment.py  lead.py  property.py
real_estate_agent/services/: __init__.py  fallback.py  langfuse_setup.py  market_data.py  mortgage.py  repositories.py  telemetry.py
real_estate_agent/tests/: __init__.py  test_models.py  test_services.py
real_estate_agent/tools/: __init__.py  appointment_tools.py  market_tools.py  mortgage_tools.py  property_tools.py
